--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "devextreme": "19.1-stable",
+    "devextreme-react": "19.1-stable",
+    "devextreme-themebuilder": "19.1-stable",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
